--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   injectable: ^2.4.2
   get_it: ^7.7.0
   equatable: ^2.0.5
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
