--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,8 @@ dependencies:
   get_it: ^7.7.0
   equatable: ^2.0.5
   image_picker: ^1.1.2
-  syncfusion_flutter_charts: ^25.2.7
   fl_chart: ^0.68.0
+  flutter_login: ^5.0.0
 
 dev_dependencies:
   flutter_test:
