--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   image_picker: ^1.1.2
   fl_chart: ^0.68.0
   flutter_login: ^5.0.0
+  video_player: ^2.8.6
+  chewie: ^1.8.1
 
 dev_dependencies:
   flutter_test:
